deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-db-deployment
  labels:
    app: postgresql-db
spec:
  selector:
    matchLabels:
      app: postgresql-db
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: postgresql-db
    spec:
      containers:
      - name: postgresql-db-container
        image: bitnami/postgresql:latest
        volumeMounts:
        - name: postgresql-db-storage
          mountPath: /bitnami/postgresql
        ports:
        - containerPort: 5432
      volumes:
        - name: postgresql-db-storage
          persistentVolumeClaim:
            claimName: camunda-engine-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-web-deployment
  labels:
    app: camunda-web
spec:
  selector:
    matchLabels:
      app: camunda-web
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: camunda-web
    spec:
      volumes:
        - name: camunda-web-config-vol
          configMap:
            name: camunda-web-config
      containers:
      - name: camunda-web-container
        image:  camunda/camunda-bpm-platform:7.12.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: camunda-web-config-vol
          mountPath: /camunda/conf/bpm-platform.xml
          subPath: bpm-platform.xml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-embedded-engine-demo-deployment
  labels:
    app: camunda-embedded-engine-demo
spec:
  selector:
    matchLabels:
      app: camunda-embedded-engine-demo
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: camunda-embedded-engine-demo
    spec:
      containers:
      - name: camunda-embedded-engine-demo-container
        image: image-registry.openshift-image-registry.svc:5000/camunda-demo/camunda-embedded-engine-demo:latest
        ports:
        - containerPort: 9080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-check-card-worker-deployment
  labels:
    app: simple-check-card-worker
spec:
  selector:
    matchLabels:
      app: simple-check-card-worker
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: simple-check-card-worker
    spec:
      containers:
      - name: check-card-worker-container
        image: image-registry.openshift-image-registry.svc:5000/camunda-demo/simple-check-card-worker:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-check-item-worker-deployment
  labels:
    app: simple-check-item-worker
spec:
  selector:
    matchLabels:
      app: simple-check-item-worker
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: simple-check-item-worker
    spec:
      containers:
      - name: simple-check-item-worker-container
        image: image-registry.openshift-image-registry.svc:5000/camunda-demo/simple-check-item-worker:latest
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 250Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-charge-card-worker-deployment
  labels:
    app: simple-charge-card-worker
spec:
  selector:
    matchLabels:
      app: simple-charge-card-worker
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: simple-charge-card-worker
    spec:
      containers:
      - name: simple-charge-card-worker-container
        image: image-registry.openshift-image-registry.svc:5000/camunda-demo/simple-charge-card-worker:latest
---
apiVersion: v1
kind: Service
metadata:
  name: camunda-embedded-engine-demo-service
spec:
  selector:
    app: camunda-embedded-engine-demo
  ports:
  - name: http
    port: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-db-service
spec:
  selector:
    app: postgresql-db
  ports:
  - name: tcp
    port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: camunda-web-service
spec:
  selector:
    app: camunda-web
  ports:
  - name: http
    port: 8080
---
apiVersion: v1
kind: Route
metadata:
  name: camunda-embedded-engine-demo-route
spec:
  to:
    kind: Service
    name: camunda-embedded-engine-demo-service
  port:
    targetPort: http
---
apiVersion: v1
kind: Route
metadata:
  name: camunda-web-route
spec:
  to:
    kind: Service
    name: camunda-web-service
  port:
    targetPort: http
